# projectagency0.3

./: Makefile  Makefile.am  Makefile.in  agency.glade  agency.glade.bak  agency.gladep.bak  config.h  config.status  configure  configure.in
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  agency  ajouter.c  ajouter.h  callbacks.c  callbacks.h  client.txt  empinfo.txt  hyberdispo.txt  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  reservation.c  reservation.h  users.txt  verifier.c  verifier.h  voldispo.txt
src/.deps/: ajouter.Po  callbacks.Po  reservation.Po  verifier.Po
